--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: 'gradle'
 
       - name: Download ktlint
         run: |
