--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.6.1"
 material = "1.10.0"
-compose-runtime = '1.8.3'
+compose = '1.8.3'
 plugin-ktlint = "13.0.0-rc.1"
 plugin-detekt = "1.23.8"
 
@@ -18,7 +18,8 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-compose-runtime = {group="androidx.compose.runtime", name="runtime", version.ref="compose-runtime"}
+androidx-compose-runtime = {group="androidx.compose.runtime", name="runtime", version.ref= "compose" }
+androidx-compose-ui = {group="androidx.compose.ui", name="ui", version.ref= "compose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
