--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -2,9 +2,9 @@ name: ktlint Formatting Check
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   ktlint:
@@ -16,9 +16,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'gradle'
+          java-version: "17"
+          distribution: "temurin"
+          cache: "gradle"
 
       - name: Download ktlint
         run: |
