--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ android.nonTransitiveRClass=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
+kotlin.daemon.jvmargs=-Xmx4g
